# genetic-algo-opt

./: Cargo.toml  README.md  in.json
.github/workflows/: rust.yml
src/: graph.rs  main.rs  model.rs  simulation.rs
